去除github社交信息

--- a/hugo.toml
+++ b/hugo.toml
@@ -970,7 +970,7 @@ social = true
 disclaimer = ""
 
 [languages.zh-cn.params.social]
-GitHub = "linjonh"
+# GitHub = "linjonh"
 # Weibo = "xxxx"
 # Steam = "xxxx"
 # Zhihu = "xxxx"
