--- a/.github/workflows/hugo-github-linux-build-deploy.yml
+++ b/.github/workflows/hugo-github-linux-build-deploy.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   build-hugo-blog:
-    runs-on: ubuntu-latest
+    runs-on: zp-nc04
     environment:
           name: github-pages
     steps:
@@ -85,7 +85,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
+    runs-on: zp-nc04
     needs: build-hugo-blog
     steps:
       - name: Deploy to GitHub Pages
