--- a/.github/workflows/hugo-github-linux-build-deploy.yml
+++ b/.github/workflows/hugo-github-linux-build-deploy.yml
@@ -24,17 +24,25 @@ concurrency:
 
 jobs:
   build-hugo-blog:
-    runs-on: ['self-hosted','zp-nc04']
+    runs-on: ['self-hosted','zp-nc10']
     environment:
           name: github-pages
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          submodules: true
-          # If using the 'assets' git submodule from Chirpy Starter, uncomment above
-          # (See: https://github.com/cotes2020/chirpy-starter/tree/main/assets)
+      # - name: Auto Checkout
+      #   uses: actions/checkout@v4
+      #   with:
+      #     fetch-depth: 0
+      #     submodules: true
+      - name: 手动Checkout
+        run: |
+          git clone https://gh-proxy.com/github.com/linjonh/TechBlog.git
+          cd TechBlog
+          git checkout hugo-blog
+          cd themes
+          git clone https://gh-proxy.com/github.com/linjonh/hugo-theme-loveIt.git loveIt
+          git config --global --add safe.directory /home/linjonh/TechBlog
+          git config --global --add safe.directory /home/linjonh/TechBlog/themes/loveIt
+          git status
       #- name: Cache Hugo Resources
         #uses: actions/cache@v3
         #with:
@@ -52,7 +60,7 @@ jobs:
       - name: 安装 Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: 'latest'  # 也可以指定具体版本，如 '0.123.4'
+          hugo-version: '0.145.0'  # 也可以指定具体版本，如 '0.123.4'
           extended: true  # 是否安装扩展版（支持 SCSS/SASS）
           
       - name: show veresion
@@ -85,7 +93,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ['self-hosted','zp-nc04']
+    runs-on: ['self-hosted','zp-nc10']
     needs: build-hugo-blog
     steps:
       - name: Deploy to GitHub Pages
