--- a/.github/workflows/hugo-github-linux-build-deploy.yml
+++ b/.github/workflows/hugo-github-linux-build-deploy.yml
@@ -82,7 +82,11 @@ jobs:
         run: hugo version
 
       - name: Build site
-        run: pwd && HUGO_ENVIRONMENT=production hugo --gc --minify
+        # --gc：启用垃圾回收（清理无用资源）。
+        # --minify：压缩 HTML、CSS 和 JS，提高构建效率。
+        # --templateMetrics：输出模板渲染耗时。
+        # --templateMetricsHints：提供优化建议，帮你找出构建瓶颈。
+        run: pwd && GOMAXPROCS=$(nproc) HUGO_ENVIRONMENT=production hugo --gc --minify --templateMetrics --templateMetricsHints
 
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
