处理主题没有下载判断错误问题

--- a/.github/workflows/hugo-github-linux-build-deploy.yml
+++ b/.github/workflows/hugo-github-linux-build-deploy.yml
@@ -48,7 +48,7 @@ jobs:
             git checkout hugo-blog
           fi
           pwd && cd themes
-          if [[ -e "loveIt" ]]; then
+          if [[ -e "loveIt/.git" ]]; then
             echo "目录已存在，直接更新"
             cd loveIt && git pull
             git log -n2  &&  cd ..
