--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@eslint/js": "^9.19.0",
+    "@rspress/plugin-shiki": "^1.43.11",
     "@types/node": "^18.11.17",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "rsbuild-plugin-google-analytics": "^1.0.3",
+    "rspress-plugin-font-open-sans": "^1.0.0",
+    "rspress-plugin-reading-time": "^0.3.0",
+    "rspress-plugin-sitemap": "^1.1.1",
     "typescript-eslint": "^8.22.0"
   }
 }
