--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://linjonh.github.io/TechBlog/"
+baseURL = "https://tech-blog.web.app"
 # languageCode = "zh-cn"
 title = "JAY.LIN个人博客"
 theme = 'loveIt'
@@ -96,7 +96,7 @@ url = "/categories/documentation/"
 title = ""
 
 [params]
-BaseURL = "/TechBlog"
+BaseURL = ""
 # site default theme ["auto", "light", "dark"]
 # 网站默认主题 ["auto", "light", "dark"]
 defaultTheme = "auto"
