--- a/.github/workflows/hugo-github-linux-build-deploy.yml
+++ b/.github/workflows/hugo-github-linux-build-deploy.yml
@@ -75,11 +75,26 @@ jobs:
         id: pages
         uses: actions/configure-pages@v4
 
+      # - name: 安装 Hugo
+      #   uses: peaceiris/actions-hugo@v3
+      #   with:
+      #     hugo-version: "0.145.0" # 也可以指定具体版本，如 '0.123.4'
+      #     extended: true # 是否安装扩展版（支持 SCSS/SASS）
+      - name: 检查是否已安装 Hugo
+        id: hugo_check
+        run: |
+          if command -v hugo > /dev/null; then
+            echo "found=true" >> $GITHUB_OUTPUT
+          else
+            echo "found=false" >> $GITHUB_OUTPUT
+          fi
+      
       - name: 安装 Hugo
+        if: steps.hugo_check.outputs.found == 'false'
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: "0.145.0" # 也可以指定具体版本，如 '0.123.4'
-          extended: true # 是否安装扩展版（支持 SCSS/SASS）
+          hugo-version: "0.145.0"
+          extended: true
 
       - name: show veresion
         run: hugo version
