--- a/.github/workflows/hugo-github-linux-build-deploy.yml
+++ b/.github/workflows/hugo-github-linux-build-deploy.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   build-hugo-blog:
-    runs-on: ["self-hosted", "4090"]
+    runs-on: ["self-hosted", "zp-nc10"]
     environment:
       name: github-pages
     steps:
@@ -142,7 +142,7 @@ jobs:
   #   environment:
   #     name: github-pages
   #     url: ${{ steps.deployment.outputs.page_url }}
-  #   runs-on: ["self-hosted", "4090"]
+  #   runs-on: ["self-hosted", "zp-nc10"]
   #   needs: build-hugo-blog
   #   steps:
   #     - name: Deploy to GitHub Pages
