更新 hugo-github-linux-build-deploy.yml
修改runner 为4090

--- a/.github/workflows/hugo-github-linux-build-deploy.yml
+++ b/.github/workflows/hugo-github-linux-build-deploy.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   build-hugo-blog:
-    runs-on: ["self-hosted", "zp-nc10"]
+    runs-on: ["self-hosted", "4090"]
     environment:
       name: github-pages
     steps:
